# tmi

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  conftest.py  cov.xml  environment.yml  noxfile.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
src/tmi/: misc_utils.py
tests/: misc_utils_test.py
